fix: google map bohol branch

--- a/prime_home/templates/prime_home/base.html
+++ b/prime_home/templates/prime_home/base.html
@@ -122,7 +122,7 @@
             });
 
             $("#div_bohol_branch").click(function(){
-                window.open("http://maps.google.com/?q=27-19 Celestino Gallares St, Tagbilaran City, Bohol");
+                window.open("http://maps.google.com/?q=St. Jude Building, Gallares Street, Corner Honorio Grupo Street, Tagbilaran City, 6300 Bohol");
             });
 
             $("#div_tacloban_branch").click(function(){
