--- a/prime_admin/templates/lms/settings_sidebar.html
+++ b/prime_admin/templates/lms/settings_sidebar.html
@@ -88,6 +88,12 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <a id="li_orientators" href="{{url_for('lms.orientators_settings')}}" class="">
+                        <i class="metismenu-icon pe-7s-settings icon-gradient bg-premium-dark" aria-hidden="true"></i>
+                        Orientators
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
