--- a/prime_admin/templates/lms/settings_sidebar.html
+++ b/prime_admin/templates/lms/settings_sidebar.html
@@ -86,6 +86,12 @@
                                 Industries
                             </a>
                         </li>
+                        <li>
+                            <a id="li_no_of_klts" href="{{url_for('lms.klts_settings')}}">
+                                <i class="metismenu-icon"></i>
+                                KLTs
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li>
