update: 32d37eaa1fb94f19a32027ce131ce276

--- a/prime_home/templates/prime_home/footer.html
+++ b/prime_home/templates/prime_home/footer.html
@@ -11,7 +11,7 @@
                     <a href="#" class="text-white">primekoreanlanguage.com</a>
                 </div>
                 <div class="d-inline-flex flex-wrap">
-                    <a href="https://www.facebook.com/primekltc" class="p-1 text-white"> <svg viewBox="0 0 24 24" fill="currentColor" width="20"
+                    <a href="https://www.facebook.com/PrimeForWorkinSouthKorea?mibextid=ZbWKwL" class="p-1 text-white"> <svg viewBox="0 0 24 24" fill="currentColor" width="20"
                             height="20">
                             <path
                                 d="M14 13.5h2.5l1-4H14v-2c0-1.03 0-2 2-2h1.5V2.14c-.326-.043-1.557-.14-2.857-.14C11.928 2 10 3.657 10 6.7v2.8H7v4h3V22h4v-8.5z" />
