feat: 493b59a3b9064e38949bbb32fab4506b

--- a/app/admin/templates/admin/admin_sidebar.html
+++ b/app/admin/templates/admin/admin_sidebar.html
@@ -97,6 +97,12 @@
                             </a>
                         </li>
                         <li>
+                            <a id="li_hired" href="{{url_for('lms.hired')}}">
+                                <i class="metismenu-icon"></i>
+                                Hired
+                            </a>
+                        </li>
+                        <li>
                             <a href="{{url_for('bp_admin.under_construction')}}?message=Student Records > Deployed">
                                 <i class="metismenu-icon"></i>
                                 Deployed
