--- a/prime_admin/templates/lms/student_records/hired/modals/hired_edit_modal.html
+++ b/prime_admin/templates/lms/student_records/hired/modals/hired_edit_modal.html
@@ -14,6 +14,43 @@
                         <div class="card-body">
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                             <input type="hidden" class="form-control" id="edit_student_id" name="edit_student_id" value="">
+
+                            <!--
+                            <div class="form-row">
+                                <div class="col-md-4">
+                                    <div class="position-relative form-group">
+                                        <label for="edit_employer_name" class="">Employer's Name</label>
+                                        <input readonly name="edit_employer_name" id="edit_employer_name" type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="position-relative form-group">
+                                        <label for="edit_company_name" class="">Company Name</label>
+                                        <input readonly name="edit_company_name" id="edit_company_name" type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="position-relative form-group">
+                                        <label for="edit_contact_number" class="">Contact Number</label>
+                                        <input readonly name="edit_contact_number" id="edit_contact_number" type="text" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-md-8">
+                                    <div class="position-relative form-group">
+                                        <label for="edit_address_in_korea" class="">Address in Korea</label>
+                                        <input readonly name="edit_address_in_korea" id="edit_address_in_korea" type="text" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="position-relative form-group">
+                                        <label for="edit_title_of_work" class="">Title of Work</label>
+                                        <input readonly name="edit_title_of_work" id="edit_title_of_work" type="text" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+                            -->
                             <div class="form-row">
                                 <div class="col-md-4 mb-3">
                                     <h5 class="card-title">Procedure</h5>
